--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
       </section>
       <section class="modal modal-map">
         <h2 class="visually-hidden">Как до нас добраться</h2>
-        <button class="modal-close">x</button>
+        <p>
+        <img src="img/map.png" width="1718" height="748" alt="Наш город находитсяна пересечении 89А и 179 трасс">
+        </p>
+        <button class="modal-close" type="button">Закрыть</button>
       </section>
     </div>
   </body>
