--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/Style.css" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper">
@@ -38,7 +41,7 @@
               <li class="filter-option">
                 <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="hotel" id="filter-hotel" checked><label for="filter-hotel">Гостиница</label></li>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Motel" id="filter-Motel" checked><label for="filter-Motel">Мотель</label>Мотель</li>
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Motel" id="filter-Motel" checked><label for="filter-Motel">Мотель</label></li>
               <li class="filter-option">
                 <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="apartment" id="filter-apartment" checked><label for="filter-apartment">Апартаменты</label></li>
             </ul>
@@ -78,7 +81,7 @@
                 <a class="button" href="#">Подробнее</a></p>
               <p class="catalog-item-price">
                 <b>от 4000 Р.</b>
-                <a class="button" href="#">Забронировать</a></p>
+                <a class="button-reservation" href="#">Забронировать</a></p>
             </div>
             <div class="rating">
               <p>Рейтинг:8,5</p>
@@ -93,7 +96,7 @@
                 <a class="button" href="#">Подробнее</a></p>
               <p class="catalog-item-price">
                 <b>от 4000 Р.</b>
-                <a class="button" href="#">Забронировать</a></p>
+                <a class="button-reservation" href="#">Забронировать</a></p>
             </div>
             <div class="rating">
               <p>Рейтинг:8,9</p>
@@ -101,13 +104,14 @@
             </div>
           </li>
           <li class="catalog-item">
+            <div><img src="img/Villas-at-poco-diablo.jpg" width="130" height="90" alt="Villas at poco diablo"></div>
             <div class="filling">
               <a href="catalog-item.html">Villas at poco diablo</a>
               <p class="catalog-item-kind"><b>Апартаменты</b>
                 <a class="button" href="#">Подробнее</a></p>
               <p class="catalog-item-price">
                 <b>от 4000 Р.</b>
-                <a class="button" href="#">Забронировать</a></p>
+                <a class="button-reservation" href="#">Забронировать</a></p>
             </div>
             <div class="rating">
               <p>Рейтинг:9,2</p>
