--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/Style.css" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper">
-      <header class="main-hedder">
+      <header class="main-heder">
         <nav class="site-navigation">
           <img class="main-hedder-logo" src="http://placehold.it/150x100" alt="Логотип">
           <ul class="navigation-list">
-            <li class="navigation-item"><a href="#">Информация</a></li>
-            <li class="navigation-item"><a href="#">Фото и видео</a></li>
-            <li class="navigation-item"><a href="#">Карта штата</a></li>
+            <li class="navigation-item"><a href="info.html">Информация</a></li>
+            <li class="navigation-item"><a href="media.html">Фото и видео</a></li>
+            <li class="navigation-item"><a href="map.html">Карта штата</a></li>
             <li class="navigation-item"><a href="catalog.html">Гостинницы</a></li>
           </ul>
         </nav>
@@ -45,7 +48,7 @@
             </li>
           </ul>
           <ul class="another-reasons-list">
-            <li class="another-reasons-item">
+            <li class="another-reasons-item one-reason">
               <h3 class="another-reasons reason-title">Там есть мост дьявола</h3>
               <p class="another-reasons reason-subtitle">№2</p>
               <p class="another-reasons reason-about">Да, по нему можно пройти! если конечно вы осмелитесь</p>
@@ -70,7 +73,6 @@
         <section class="desire">
           <h4 class="desire-title">Заинтересовались?</h4>
           <p class="desire-info">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в седоне</p>
-          <!-- Здесь будет форма -->
         </section>
       </main>
       <footer class="main-footer">
