--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <header class="main-heder">
         <nav class="site-navigation">
-          <img class="main-hedder-logo" src="http://placehold.it/150x100" alt="Логотип">
+          <a><img class="main-hedder-logo" src="img/logo-sedona.svg" width="140" height="72" alt="Логотип"></a>
           <ul class="navigation-list">
             <li class="navigation-item"><a href="info.html">Информация</a></li>
             <li class="navigation-item"><a href="media.html">Фото и видео</a></li>
@@ -21,7 +21,7 @@
         </nav>
       </header>
       <main class="container">
-        <div class="promotional"><img class="promotional-picture" src="http://placehold.it/150x100" alt="картинка с пейзажем"></div>
+        <div class="promotional"><img class="promotional-picture" src="img/background-photo.jpg" width="1200" height="800" alt="картинка с пейзажем"></div>
         <h1 class="visually-hidden">Седона</h1>
         <section class="reasons">
           <h2  class="visually-hidden">Причины для выбора</h2>
