--- a/catalog.html
+++ b/catalog.html
@@ -76,7 +76,7 @@
           <li class="catalog-item">
             <div class="building-photo"><img src="img/Amara-resort-&-spa.jpg" width="130" height="90" alt="Amara resort & spa"></div>
             <div class="filling">
-              <a href="catalog-item.html">Amara resort & spa</a>
+              <a href="catalog-item.html" class="appellation">Amara resort & spa</a>
               <p class="catalog-item-kind"><b>Гостинница</b>
                 <a class="button" href="#">Подробнее</a></p>
               <p class="catalog-item-price">
@@ -91,7 +91,7 @@
           <li class="catalog-item">
             <div><img src="img/Desert-quail-inn.jpg" width="130" height="90" alt="Desert quail inn"></div>
             <div class="filling">
-              <a href="catalog-item.html">Desert quail inn</a>
+              <a href="catalog-item.html" class="appellation">Desert quail inn</a>
               <p class="catalog-item-kind"><b>Мотель</b>
                 <a class="button" href="#">Подробнее</a></p>
               <p class="catalog-item-price">
@@ -106,7 +106,7 @@
           <li class="catalog-item">
             <div><img src="img/Villas-at-poco-diablo.jpg" width="130" height="90" alt="Villas at poco diablo"></div>
             <div class="filling">
-              <a href="catalog-item.html">Villas at poco diablo</a>
+              <a href="catalog-item.html" class="appellation">Villas at poco diablo</a>
               <p class="catalog-item-kind"><b>Апартаменты</b>
                 <a class="button" href="#">Подробнее</a></p>
               <p class="catalog-item-price">
