--- a/index.html
+++ b/index.html
@@ -8,104 +8,170 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class="wrapper">
-      <header class="main-heder">
+    <div class="wrapper-main-page">
+    <header class="main-header">
         <nav class="site-navigation">
-          <a><img class="main-hedder-logo" src="img/logo-sedona.svg" width="140" height="72" alt="Логотип"></a>
+          <a class="main-header-logo">
+            <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип город Седона">
+          </a>
           <ul class="navigation-list">
-            <li class="navigation-item"><a href="info.html">Информация</a></li>
-            <li class="navigation-item"><a href="media.html">Фото и видео</a></li>
-            <li class="navigation-item"><a href="map.html">Карта штата</a></li>
-            <li class="navigation-item"><a href="catalog.html">Гостинницы</a></li>
+            <li><a>Информация</a></li>
+            <li><a href="#">Фото и видео</a></li>
+            <li><a href="#">Карта штата</a></li>
+            <li><a href="catalog.html">Гостиницы</a></li>
           </ul>
         </nav>
-      </header>
-      <main class="container">
-        <div class="promotional"><img class="promotional-picture" src="img/background-photo.jpg" width="1200" height="800" alt="картинка с пейзажем"></div>
-        <h1 class="visually-hidden">Седона</h1>
-        <section class="reasons">
-          <h2  class="visually-hidden">Причины для выбора</h2>
-          <div class="block-picture">
-            <div class="picture-city"><img class="picture-city-flag" src="http://placehold.it/150x100" alt="картинка с флагом">Картинка домов с флагом
+    </header>
+    <main class="container">
+      <h1 class="visually-hidden">Sedona</h1>
+      <p class="main-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+      <section class="reasons">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <p class="reason-title">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+        <ul class="reason-list">
+          <li class="reason-item">
+            <div class="reason-item-wide">
+              <h3>Настоящий городок</h3>
+              <p>-№1-</p>
+              <p class="reason-promo">Седона - не аттракцион для туристов, там течет своя жизнь</p>
             </div>
-            <div class="one-reason">
-              <h3 class="one-reason reason-title">Настоящий городок</h3>
-              <p class="one-reason reason-subtitle">№1</p>
-              <p class="one-reason reason-about">Седона не атракцион для туристов, там течёт своя жизнь</p>
+            <div class="reason-img">
+              <img src="img/real-city.jpg" width="800" height="256" alt="Настоящий городок">
             </div>
-          </div>
-          <ul class="additional-advantage-list">
-            <li class="additional-advantage-item"><p class="bold">Жилье</p>
-              <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-            </li>
-            <li class="additional-advantage-item">
-              <p class="bold">Еда</p>
-              <p>Всегда заказывайте фирменный бургер, не разочаруетесь</p>
-            </li>
-            <li class="additional-advantage-item">
-              <p class="bold">Сувениры</p>
-              <p>Не только китайского, но и местного производства!</p>
-            </li>
-          </ul>
-          <ul class="another-reasons-list">
-            <li class="another-reasons-item one-reason">
-              <h3 class="another-reasons reason-title">Там есть мост дьявола</h3>
-              <p class="another-reasons reason-subtitle">№2</p>
-              <p class="another-reasons reason-about">Да, по нему можно пройти! если конечно вы осмелитесь</p>
-            </li>
-            <li class="another-reasons-item">
-              <h3 class="another-reasons reasons-title">Небольшая площадь</h3>
-              <p class="nother-reasons reasons-subtitle">№3</p>
-              <p class="nother-reasons reasons-about">Все достопримечательности находятся очень близко</p>
-            </li>
-            <li class="another-reasons-item">
-              <h3 class="another-reasons reasons-title">Красивая дорога</h3>
-              <p class="nother-reasons reasons-subtitle">№4</p>
-              <p class="nother-reasons reasons-about">Ехать в седону из лас-вегаса совсем не скучно!</p>
-            </li>
-            <li class="another-reasons-item">
-              <h3 class="another-reasons reasons-title">Мало туристов</h3>
-              <p class="nother-reasons reasons-subtitle">№5</p>
-              <p class="nother-reasons reasons-about">Большинство едет в гранд каньон и толпится там</p>
-            </li>
-          </ul>
-        </section>
-        <section class="desire">
-          <h4 class="desire-title">Заинтересовались?</h4>
-          <p class="desire-info">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в седоне</p>
-        </section>
-      </main>
-      <footer class="main-footer">
-        <p class="visit">#visitsedona</p>
-        <div class="footer-social">
-          <ul>
-            <li><a class="social-button social network" href="#">Вконтакте</a></li>
-            <li><a class="social-button social network" href="#">Фейсбук</a></li>
-            <li><a class="social-button social network" href="#">Инстаграм</a></li>
-          </ul>
+          </li>
+          <li class="reason-item">
+            <ul class="advantage-list">
+              <li class="advantage-icon-1">
+                <div class="advantage-item">
+                  <h3 class="reason-form-1">Жильё</h3>
+                  <p class="reason-promo reason-forms-1">Рекомендуем пожить<br/> в настоящем мотеле,<br/> все как в кино!</p>
+                </div>
+              </li>
+              <li class="advantage-icon-2">
+                <div class="advantage-item">
+                  <h3 class="reason-form-2">Еда</h3>
+                  <p class="reason-promo reason-forms-2">Всегда заказывайте<br/> фирменный бургер,<br/> вы не разочаруетесь!</p>
+                </div>
+              </li>
+              <li class="advantage-icon-3">
+                <div class="advantage-item">
+                  <h3 class="reason-form-3">Сувениры</h3>
+                  <p class="reason-promo reason-forms-3">Не только китайского,<br/> но и местного<br/> производства!</p>
+                </div>
+              </li>
+            </ul>
+          </li>
+          <li class="reason-item">
+            <div class="reason-item-wide">
+              <h3>Там есть мост дьявола</h3>
+              <p>-№2-</p>
+              <p class="reason-promo">Да, по нему можно пройти если конечно вы осмелитесь</p>
+            </div>
+            <div class="reason-img">
+              <img src="img/devils-bridge.jpg" width="800" height="256" alt="Мост дьявола">
+            </div>
+          </li>
+          <li class="reason-item reason-item-grey">
+            <div class="">
+              <h3>Небольшая площадь</h3>
+              <p>-№3-</p>
+              <p class="reason-promo">Все достопримечательн+ости находтся очень близко</p>
+            </div>
+          </li>
+          <li class="reason-item reason-item-grey">
+            <div class="">
+              <h3>Красивая дорога</h3>
+              <p>-№4-</p>
+              <p class="reason-promo">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </div>
+          </li>
+          <li class="reason-item reason-item-grey">
+            <div class="">
+              <h3>Мало туристов</h3>
+              <p>-№5-</p>
+              <p class="reason-promo">Большинство едет в Гранд каньон и толпится там</p>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <section class="desire">
+        <h2 class="visually-hidden">Поиск гостиницы</h2>
+        <b>Заинтересовались?</b>
+        <p class="search-intro">Укажите предполагаемые даты поездки,<br>
+          и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <button class="button search-button">Поиск гостиницы в Седоне</button>
+        <div class="modal modal-search-form">
+          <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
+            <p class="search-item">
+              <label for="arrival-date">Дата заезда:</label>
+              <input id="arrival-date" type="text" name="arrival-date" placeholder="24 апреля 2017">
+              <button class="button calendar-icon" type="submit">
+                <span class="visually-hidden">Календарь</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
+              </button>
+            </p>
+            <p class="search-item">
+              <label for="departure-date">Дата выезда:</label>
+              <input id="departure-date" type="text" name="departure-date" placeholder="4 июля 2017">
+              <button class="button calendar-icon" type="submit">
+                <span class="visually-hidden">Календарь</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
+              </button>
+            </p>
+            <p class="search-item">
+              <label for="aduls">Взрослые:</label>
+              <input  class="search-" id="aduls" type="number" name="aduls" min="0" placeholder="2">
+              <button class="button less-button" type="submit">-</button>
+              <button class="button more-button" type="submit">+</button>
+            </p>
+            <p class="search-item">
+              <label for="kids">Дети:</label>
+              <input  class="" id="kids" type="number" name="kids" min="0" placeholder="0">
+              <button class="button less-button" type="submit">-</button>
+              <button class="button more-button" type="submit">+</button>
+            </p>
+            <button class="button find-button" type="submit">Найти</button>
+          </form>
         </div>
-        <p class="footer-copyright bold">
-          Website by
-          <a class="button" href="https://htmlacademy.ru">HTML Academy</a></p>
-      </footer>
-      <section class="city-hotels">
-        <h2 class="city-hotels-title">Поиск гостинницы в седоне</h2>
-        <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
-          <p class="desire-item"><label for="desire-date-entry">Дата въезда</label><input id="desire-date-entry" type="text" name="date-entry" value="" placeholder="24.04.2017"></p>
-          <p class="desire-item"><label for="desire-date-departure">Дата выезда</label><input id="desire-date-departure" type="text" name="date-departure" value="" placeholder="4.07.2017"></p>
-          <p class="desire-item"><label for="desire-adults">Взрослые</label><input id="desire-adults" type="text" name="adults" value="" placeholder="2"></p>
-          <p class="desire-item"><label for="desire-kids">Дети</label><input id="desire-kids" type="text" name="kids" value="" placeholder="0"></p>
-          <button class="button" type="submit">Найти</button>
-        </form> 
-        <button class="modal-close" type="button">Закрыть</button>
       </section>
-      <section class="modal modal-map">
-        <h2 class="visually-hidden">Как до нас добраться</h2>
+      <div class="map-block">
+        <img src="img/map.jpg" width="1200" height="473" alt="Как до нас добраться">
+      </div>
+    </main>
+    <footer class="main-footer container">
+      <p class="footer-hashtag container">#visitsedona</p>
+      <div class="footer-social container">
+        <ul class="social-list">
+          <li>
+            <a class="button social-button twitter-button" href="#">
+              <span class="visually-hidden">Twitter</span>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="15" viewBox="0 0 17 15"><path d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z"/></svg>
+              </a>
+          </li>
+          <li>
+            <a class="button social-button facebook-button" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"><path d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg>
+            </a>
+          </li>
+          <li>
+            <a class="button social-button youtube-button" href="#">
+              <span class="visually-hidden">Youtube</span>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16" viewBox="0 0 20 16"><path d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z"/></svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-copyright container">
         <p>
-        <img src="img/map.png" width="1718" height="748" alt="Наш город находитсяна пересечении 89А и 179 трасс">
+          website by
         </p>
-        <button class="modal-close" type="button">Закрыть</button>
-      </section>
-    </div>
+        <a class="button copyright-button" href="https://htmlacademy.ru/intensive/htmlcss">
+            <span class="visually-hidden">HTML Academy</span>
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 113 39" width="115" height="41"><path d="M46.84 28.22a2.07 2.07 0 0 0 .58-.11v1.4a3.41 3.41 0 0 1-1.24.22 1.75 1.75 0 0 1-1.75-1 5.08 5.08 0 0 1-3.3 1.13c-1.59 0-3.06-.87-3.06-2.68 0-2.24 2.08-2.93 3.9-2.93a11.63 11.63 0 0 1 2.28.26v-.31c0-1.09-.8-1.86-2.3-1.86a7.79 7.79 0 0 0-3.15.67v-1.79a10.72 10.72 0 0 1 3.35-.58c2.48 0 4 1.18 4 3.83v3.14a.57.57 0 0 0 .69.61zm-6.76-1.19a1.42 1.42 0 0 0 1.64 1.29 3.56 3.56 0 0 0 2.53-1v-1.51a10.21 10.21 0 0 0-1.9-.22c-1.1.01-2.27.35-2.27 1.45zM53.06 20.62a5.29 5.29 0 0 1 2.7.67v1.79a4.28 4.28 0 0 0-2.42-.73 2.89 2.89 0 1 0 0 5.76 5.26 5.26 0 0 0 2.55-.67v1.8a6.58 6.58 0 0 1-2.9.6 4.42 4.42 0 0 1-4.72-4.54 4.54 4.54 0 0 1 4.79-4.68zM65.84 28.22a2.07 2.07 0 0 0 .58-.11v1.4a3.41 3.41 0 0 1-1.24.22 1.75 1.75 0 0 1-1.75-1 5.08 5.08 0 0 1-3.3 1.13c-1.59 0-3.06-.87-3.06-2.68 0-2.24 2.08-2.93 3.9-2.93a11.63 11.63 0 0 1 2.28.26v-.31c0-1.09-.8-1.86-2.3-1.86a7.79 7.79 0 0 0-3.15.67v-1.79a10.72 10.72 0 0 1 3.35-.58c2.48 0 4 1.18 4 3.83v3.14a.57.57 0 0 0 .69.61zm-6.76-1.19a1.42 1.42 0 0 0 1.64 1.29 3.56 3.56 0 0 0 2.53-1v-1.51a10.21 10.21 0 0 0-1.9-.22c-1.11.01-2.27.35-2.27 1.45zM76.67 16.85v12.76h-1.76v-1.39a4.07 4.07 0 0 1-3.35 1.62 4.62 4.62 0 0 1 0-9.22 4 4 0 0 1 3.15 1.37v-5.14h2zm-4.76 5.48a2.9 2.9 0 0 0 0 5.8 3 3 0 0 0 2.79-1.84v-2.13a3.06 3.06 0 0 0-2.79-1.83zM82.99 20.62c3.48 0 4.68 2.81 4.12 5.34h-6.58c.22 1.57 1.75 2.22 3.35 2.22a6.41 6.41 0 0 0 2.77-.62v1.68a7.5 7.5 0 0 1-3.14.6c-2.68 0-5-1.53-5-4.61a4.39 4.39 0 0 1 4.48-4.61zm.09 1.62a2.39 2.39 0 0 0-2.57 2.26h4.85a2.06 2.06 0 0 0-2.28-2.26zM89.1 29.61v-8.75h1.73v1.09a4 4 0 0 1 2.92-1.33 3 3 0 0 1 2.73 1.4 4.33 4.33 0 0 1 3.06-1.4 3.21 3.21 0 0 1 3.32 3.52v5.47h-2V24.2a1.67 1.67 0 0 0-1.73-1.84 2.94 2.94 0 0 0-2.17 1.18V29.61h-2V24.2a1.67 1.67 0 0 0-1.73-1.84 3.11 3.11 0 0 0-2.32 1.35v5.91h-2zM111.47 20.86h2l-4.1 9.93c-.95 2.28-2.19 3-3.52 3a5 5 0 0 1-1.15-.15v-1.66a3 3 0 0 0 .89.13c.95 0 1.66-.67 2.17-2l.18-.44-4.16-8.82h2.13l3 6.6zM40.66 1.53v5a4 4 0 0 1 2.83-1.2A3.41 3.41 0 0 1 47.1 8.9v5.41h-2V9.15a1.9 1.9 0 0 0-2-2.1 3.08 3.08 0 0 0-2.44 1.46v5.8h-2V1.53h2zM52.43 2.42v3.12h3.17v1.71h-3.17v4c0 1.15.53 1.53 1.66 1.53a4.71 4.71 0 0 0 1.77-.35v1.68a7.14 7.14 0 0 1-2.35.38 2.68 2.68 0 0 1-3-2.88V7.23h-1.6V5.52h1.57V2.88zM58.1 14.29V5.54h1.73v1.09a4 4 0 0 1 2.92-1.33 3 3 0 0 1 2.73 1.4 4.33 4.33 0 0 1 3.06-1.4 3.21 3.21 0 0 1 3.32 3.52v5.47h-2V8.88a1.67 1.67 0 0 0-1.73-1.84 2.94 2.94 0 0 0-2.17 1.18V14.29h-2V8.88a1.67 1.67 0 0 0-1.73-1.84 3.11 3.11 0 0 0-2.32 1.35v5.91h-2zM74.72 1.52h1.95v12.76h-1.95zM15.44.02h-.16L0 1.62v28l15.28 9.09 15.28-9.09v-28zm13.12 28.45l-13.28 7.9L2 28.47V16.99l13.22 7.87v1.43l-9.07-5.4v1.38l9.11 5.47v1.46l-9.1-5.42v1.38l9.11 5.47 9.19-5.5V19.22l4.1-2.45v11.67zm0-13.16l-3.65 2.14-1.68 1-8-4.76v1.38l6.84 4.07h-.06l-.15.09-1 .57-5.64-3.36v1.38l4.45 2.65-1.05.7-3.36-2v1.38l2.21 1.3-2.25 1.35-13.16-7.82 13.17-7.92zm0-1.39L15.21 6.05l-13.2 7.86V3.41l13.28-1.39 13.28 1.39v10.51z"/></svg>
+          </a>
+      </div>
+    </footer>
+      </div>
   </body>
 </html>
