--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
               <li class="advantage-icon-1">
                 <div class="advantage-item">
                   <h3 class="reason-form-1">Жильё</h3>
-                  <p class="reason-promo reason-forms-1">Рекомендуем пожить<br/> в настоящем мотеле,<br/> все как в кино!</p>
+                  <p class="reason-promo reason-forms-1">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                 </div>
               </li>
               <li class="advantage-icon-2">
                 <div class="advantage-item">
                   <h3 class="reason-form-2">Еда</h3>
-                  <p class="reason-promo reason-forms-2">Всегда заказывайте<br/> фирменный бургер,<br/> вы не разочаруетесь!</p>
+                  <p class="reason-promo reason-forms-2">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                 </div>
               </li>
               <li class="advantage-icon-3">
                 <div class="advantage-item">
                   <h3 class="reason-form-3">Сувениры</h3>
-                  <p class="reason-promo reason-forms-3">Не только китайского,<br/> но и местного<br/> производства!</p>
+                  <p class="reason-promo reason-forms-3">Не только китайского, но и местного производства!</p>
                 </div>
               </li>
             </ul>
@@ -75,7 +75,7 @@
             <div class="">
               <h3>Небольшая площадь</h3>
               <p>-№3-</p>
-              <p class="reason-promo">Все достопримечательн+ости находтся очень близко</p>
+              <p class="reason-promo">Все достопримечательности находтся очень близко</p>
             </div>
           </li>
           <li class="reason-item reason-item-grey">
@@ -143,19 +143,19 @@
       <div class="footer-social container">
         <ul class="social-list">
           <li>
-            <a class="button social-button twitter-button" href="#">
+            <a class="button social-button social-button-1 twitter-button" href="#">
               <span class="visually-hidden">Twitter</span>
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="15" viewBox="0 0 17 15"><path d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z"/></svg>
               </a>
           </li>
           <li>
-            <a class="button social-button facebook-button" href="#">
+            <a class="button social-button social-button-2 facebook-button" href="#">
               <span class="visually-hidden">Фейсбук</span>
               <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"><path d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg>
             </a>
           </li>
           <li>
-            <a class="button social-button youtube-button" href="#">
+            <a class="button social-button social-button-3 youtube-button" href="#">
               <span class="visually-hidden">Youtube</span>
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16" viewBox="0 0 20 16"><path d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z"/></svg>
             </a>
