--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <button class="button search-button">Поиск гостиницы в Седоне</button>
         <div class="modal modal-search-form">
           <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
-            <p class="search-item">
+            <p class="search-item arrival-date">
               <label for="arrival-date">Дата заезда:</label>
               <input id="arrival-date" type="text" name="arrival-date" placeholder="24 апреля 2017">
               <button class="button calendar-icon" type="submit">
@@ -110,7 +110,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
               </button>
             </p>
-            <p class="search-item">
+            <p class="search-item departure-date">
               <label for="departure-date">Дата выезда:</label>
               <input id="departure-date" type="text" name="departure-date" placeholder="4 июля 2017">
               <button class="button calendar-icon" type="submit">
@@ -118,13 +118,13 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
               </button>
             </p>
-            <p class="search-item">
+            <p class="search-item aduls">
               <label for="aduls">Взрослые:</label>
               <input  class="search-" id="aduls" type="number" name="aduls" min="0" placeholder="2">
               <button class="button less-button" type="submit">-</button>
               <button class="button more-button" type="submit">+</button>
             </p>
-            <p class="search-item">
+            <p class="search-item kids">
               <label for="kids">Дети:</label>
               <input  class="" id="kids" type="number" name="kids" min="0" placeholder="0">
               <button class="button less-button" type="submit">-</button>
