--- a/catalog.html
+++ b/catalog.html
@@ -33,14 +33,17 @@
             <ul>
               <li class="filter-option-1">
                 <input class="visually-hidden filter-input filter-input-checkbox" id="pool-checkbox" type="checkbox" name="checkbox-indicator" checked>
+                <span class="checkbox-indicator"></span>
                 <label class="checked-indicator" for="pool-checkbox">Бассейн</label>
               </li>
               <li class="filter-option-2">
                 <input class="visually-hidden filter-input filter-input-checkbox" id="parking-checkbox" type="checkbox" name="checkbox-indicator">
+                <span class="checkbox-indicator"></span>
                 <label class="checked-indicator" for="parking-checkbox">Парковка</label>
               </li>
               <li class="filter-option-3">
-                <input class="visually-hidden filter-input filter-input-checkbox" id="wi-fi-checked" type="checkbox" name="checkbox-indicator" checked>
+                <input class="visually-hidden filter-input filter-input-checkbox" id="wi-fi-checked" type="checkbox" name="checkbox-indicator">
+                <span class="checkbox-indicator"></span>
                 <label class="checked-indicator" for="wi-fi-checked">Wi-Fi</label>
               </li>
             </ul>
@@ -51,15 +54,18 @@
             <legend class="filter-title">Тип жилья:</legend>
             <ul>
               <li class="filter-option-1">
-                <input class="visually-hidden filter-input filter-input-checkbox" id="hotel-checkbox" type="checkbox" name="checkbox-indicator" checked>
+                <input class="visually-hidden filter-input filter-input-checkbox-2" id="hotel-checkbox" type="checkbox" name="checkbox-indicator" checked>
+                <span class="checkbox-indicator"></span>
                 <label class="checked-indicator" for="hotel-checkbox">Гостиница</label>
               </li>
               <li class="filter-option-2">
-                <input class="visually-hidden filter-input filter-input-checkbox" id="motel-checkbox" type="checkbox" name="checkbox-indicator" checked>
+                <input class="visually-hidden filter-input filter-input-checkbox-2" id="motel-checkbox" type="checkbox" name="checkbox-indicator" checked>
+                <span class="checkbox-indicator"></span>
                 <label class="checked-indicator" for="motel-checkbox">Мотель</label>
               </li>
               <li class="filter-option-3">
-                <input class="visually-hidden filter-input filter-input-checkbox" id="apartments-checkbox" type="checkbox" name="checkbox-indicator" checked>
+                <input class="visually-hidden filter-input filter-input-checkbox-2" id="apartments-checkbox" type="checkbox" name="checkbox-indicator" checked>
+                <span class="checkbox-indicator"></span>
                 <label class="checked-indicator" for="apartments-checkbox">Апартаменты</label>
               </li>
             </ul>
